--- a/.github/workflows/main-release.v1.yaml
+++ b/.github/workflows/main-release.v1.yaml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@main
       with:
-        ref: 3.y
+        ref: main
 
     - uses: joschi/setup-jdk@v2
       with:
@@ -24,7 +24,6 @@ jobs:
         CI: false
         BOT_NAME: ${{ secrets.HDES_BOT_NAME }}
         BOT_EMAIL: ${{ secrets.HDES_BOT_EMAIL }}  
-        BOT_TOKEN: ${{ secrets.HDES_BOT_TOKEN }}
         GITHUB_SHA: ${GITHUB_SHA}
         GITHUB_REF: ${GITHUB_REF}
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
