--- a/insurance-types-build-parent/pom.xml
+++ b/insurance-types-build-parent/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.resys.hdes</groupId>
     <artifactId>insurance-types-parent</artifactId>
-    <version>999-SNAPSHOT</version>
+    <version>1.1.3</version>
   </parent>
 
   <artifactId>insurance-types-build-parent</artifactId>
