--- a/insurance-types-cover/pom.xml
+++ b/insurance-types-cover/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.resys.hdes</groupId>
     <artifactId>insurance-types-build-parent</artifactId>
-    <version>1.1.3</version>
+    <version>999-SNAPSHOT</version>
     <relativePath>../insurance-types-build-parent/pom.xml</relativePath>
   </parent>
   <packaging>jar</packaging>
