--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.resys.hdes</groupId>
   <artifactId>insurance-types-parent</artifactId>
-  <version>1.1.3</version>
+  <version>999-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>insurance-types-parent</name>
 
